# infopage

./: Cargo.toml  index.html  infopage-f70998f90b74d39d.js  infopage-f70998f90b74d39d_bg.wasm
.github/workflows/: pages.yml  rust.yml
src/: main.rs
